Develope the structure of the componnet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Course-Lit</title>
 </head>
 <body>
-    
+    <h1>Aprendiendo un poco de Lit</h1>
+    <my-counter></my-counter>
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
