Develope and understand how the events work in lit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <h1>Aprendiendo un poco de Lit</h1>
-    <my-counter></my-counter>
+    <my-counter 
+    counter="10"
+    ></my-counter>
+    
+    <my-counter 
+        counter="24"
+    ></my-counter>
+
     <script src="./index.js" type="module"></script>
 </body>
 </html>
