--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     ></my-counter>
 
     <script src="./index.js" type="module"></script>
+    <script type="module" src="https://unpkg.com/wired-elements/lib/wired-button.js?module"></script>
 </body>
 </html>
