Add a restart function to a new button using all the knowledges earned

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         counter="24"
     ></my-counter>
 
+    <my-counter 
+    id="counter"
+    counter="0"
+    ></my-counter>
+
     <script src="./index.js" type="module"></script>
     <script type="module" src="https://unpkg.com/wired-elements/lib/wired-button.js?module"></script>
 </body>
