Develope a new component using a input event handler

--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
 </head>
 <body>
     <h1>Aprendiendo un poco de Lit</h1>
-    <my-counter 
-    counter="10"
-    ></my-counter>
-    
-    <my-counter 
-        counter="24"
-    ></my-counter>
 
+    <name-tag></name-tag>
+   
     <my-counter 
     id="counter"
     counter="0"
     ></my-counter>
+
+    
 
     <script src="./index.js" type="module"></script>
     <script type="module" src="https://unpkg.com/wired-elements/lib/wired-button.js?module"></script>
